--- a/templates/rango/add_page.html
+++ b/templates/rango/add_page.html
@@ -1,13 +1,11 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <title>Rango</title>
-    </head>
+{% extends 'rango/base.html' %}
 
-    <body>
+{% load staticfiles %}
+
+{% block body_block %}
         <h1>Add a Page</h1>
 
-        <form id="page_form" method="post" action="/rango/category/{{ cat_slug }}/add_page/">
+        <form id="page_form" method="post" action="{% url 'add_page'  category.slug %}">
 
             {% csrf_token %}
             {% for hidden in form.hidden_fields %}
@@ -22,6 +20,4 @@
 
             <input type="submit" name="submit" value="Create Page" />
         </form>
-    </body>
-
-</html>
+{% endblock %}
