--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -1,10 +1,8 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <title>Rango</title>
-    </head>
+{% extends 'rango/base.html' %}
 
-    <body>
+{% load staticfiles %}
+
+{% block body_block %}
         {% if user.is_authenticated %}
             <h1>Rango says... hello {{ user.username }}!</h1>
         {% else %}
@@ -15,7 +13,7 @@
             <ul>
                 {% for category in categories %}
                 <!-- Following line changed to add an HTML hyperlink -->
-                <li><a href="/rango/category/{{ category.slug }}">{{ category.name }}</a></li>
+                <li><a href="{% url 'category'  category.slug %}">{{ category.name }}</a></li>
                 {% endfor %}
             </ul>
        {% else %}
@@ -27,23 +25,10 @@
             <ul>
                 {% for page in pages %}
                 <!-- Following line changed to add an HTML hyperlink -->
-                <li><a href="{{ category.url }}">{{ page.title }}</a></li>
+                <li><a href="{{ page.url }}">{{ page.title }}</a></li>
                 {% endfor %}
             </ul>
        {% else %}
             <strong>There are no pages present.</strong>
        {% endif %}
-
-        {% if user.is_authenticated %}
-            <a href="/rango/restricted/">Restricted Page</a><br />
-            <a href="/rango/logout/">Logout</a><br />
-        {% else %}
-            <a href="/rango/register/">Register Here</a><br />
-            <a href="/rango/login/">Login</a><br />
-        {% endif %}
-
-        <a href="/rango/about/">About</a><br/>
-        <a href="/rango/add_category/">Add a New Category</a><br />
-
-    </body>
-</html>
+{% endblock %}
