--- a/templates/rango/login.html
+++ b/templates/rango/login.html
@@ -1,14 +1,11 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <!-- Is anyone getting tired of repeatedly entering the header over and over?? -->
-        <title>Rango</title>
-    </head>
+{% extends 'rango/base.html' %}
 
-    <body>
+{% load staticfiles %}
+
+{% block body_block %}
         <h1>Login to Rango</h1>
 
-        <form id="login_form" method="post" action="/rango/login/">
+        <form id="login_form" method="post" action="{% url 'login' %}">
             {% csrf_token %}
             Username: <input type="text" name="username" value="" size="50" />
             <br />
@@ -17,6 +14,5 @@
 
             <input type="submit" value="submit" />
         </form>
+{%  endblock %}
 
-    </body>
-</html>
