Chapter 11 + exercises completed - added cookie support ( demo at about page )

--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -10,5 +10,7 @@
         <h1>Rango says...</h1>
         Rango says here is the about page. <br/>
 
+        <p> visits: {{ visits }}</p> 
+
         <img src="{% static "images/rango.png" %}" alt="Picture of Rango" />
 {% endblock %}
