--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -7,10 +7,13 @@
 {% endblock %}
 
 {% block body_block %}
+    <div class="page-header">
+                <h1>About</h1>
+            </div>
         <h1>Rango says...</h1>
         Rango says here is the about page. <br/>
 
-        <p> visits: {{ visits }}</p> 
+        <p> visits: {{ visits }}</p>
 
-        <img src="{% static "images/rango.png" %}" alt="Picture of Rango" />
+        <img  width="90" height="100" src="{% static "images/rango.png" %}" alt="Picture of Rango" />
 {% endblock %}
