--- a/templates/rango/add_category.html
+++ b/templates/rango/add_category.html
@@ -3,9 +3,8 @@
 {% load staticfiles %}
 
 {% block body_block %}
-        <h1>Add a Category</h1>
-
-        <form id="category_form" method="post" action="{% url 'add_category' %}">
+      <h2 class="form-signin-heading">Add a Category </h2>
+        <form role="form"  id="page_form" method="post" action="{% url 'add_category' %}">
 
             {% csrf_token %}
             {% for hidden in form.hidden_fields %}
@@ -18,6 +17,7 @@
                 {{ field }}
             {% endfor %}
 
-            <input type="submit" name="submit" value="Create Category" />
+        <button class="btn btn-primary" type="submit" name="submit">Add Category</button>
+
         </form>
 {% endblock %}
