--- a/templates/rango/login.html
+++ b/templates/rango/login.html
@@ -3,7 +3,9 @@
 {% load staticfiles %}
 
 {% block body_block %}
-        <h1>Login to Rango</h1>
+         <div class="page-header">
+                <h1>Login to Rango</h1>
+            </div>
 
         <form id="login_form" method="post" action="{% url 'login' %}">
             {% csrf_token %}
