--- a/templates/rango/register.html
+++ b/templates/rango/register.html
@@ -3,7 +3,9 @@
 {% load staticfiles %}
 
 {% block body_block %}
-        <h1>Register with Rango</h1>
+         <div class="page-header">
+                <h1>Register with Rango</h1>
+            </div>
 
         {% if registered %}
         Rango says: <strong>thank you for registering!</strong>
