--- a/templates/rango/restricted.html
+++ b/templates/rango/restricted.html
@@ -3,5 +3,8 @@
 {% load staticfiles %}
 
 {% block body_block %}
+     <div class="page-header">
+                <h1>Restricted</h1>
+            </div>
     <h3>Since you're logged in, you can see this text!</h3>
 {% endblock %}
